--- a/PEyLW/Trabajo Final/assets/css/styles.css
+++ b/PEyLW/Trabajo Final/assets/css/styles.css
@@ -5,11 +5,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
-html {
-    scroll-behavior: smooth;
-}
-
-.hero {
+.main {
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(rgba(12,3,51,0.3),rgba(12,3,51,0.3));
@@ -76,7 +72,7 @@ nav .logo {
 
 .content h1 {
     font-size: 150px;
-    -webkit-text-stroke: 2.3px #fff;
+    -webkit-text-stroke: 2.2px #fff;
     color: transparent;
     font-weight: 600;
     transition: 0.15s;
